[gd_scene load_steps=38 format=2]

[ext_resource path="res://NPCs/Henchman/henchman-64-Sheet.png" type="Texture" id=1]
[ext_resource path="res://NPCs/Henchman/Henchman.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112, 32 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.76
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.36, 0.48, 0.56, 0.68, 0.76, 0.88 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=5]
resource_name = "DeathEnd"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=6]
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 16, 17, 16 ]
}

[sub_resource type="Animation" id=7]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "DeathEnd"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=32]
states/Attack/node = SubResource( 9 )
states/Attack/position = Vector2( 361.24, 387.812 )
states/Death/node = SubResource( 10 )
states/Death/position = Vector2( 44.41, 216.344 )
states/DeathEnd/node = SubResource( 11 )
states/DeathEnd/position = Vector2( -135.11, 214.188 )
states/Hurt/node = SubResource( 12 )
states/Hurt/position = Vector2( 355.74, 215.266 )
states/Idle/node = SubResource( 13 )
states/Idle/position = Vector2( 174, 76.9062 )
states/Run/node = SubResource( 14 )
states/Run/position = Vector2( 569.5, 78.875 )
transitions = [ "Idle", "Run", SubResource( 15 ), "Run", "Idle", SubResource( 16 ), "Idle", "Attack", SubResource( 17 ), "Attack", "Idle", SubResource( 18 ), "Run", "Attack", SubResource( 19 ), "Attack", "Run", SubResource( 20 ), "Idle", "Hurt", SubResource( 21 ), "Hurt", "Idle", SubResource( 22 ), "Hurt", "Run", SubResource( 23 ), "Run", "Hurt", SubResource( 24 ), "Attack", "Hurt", SubResource( 25 ), "Hurt", "Attack", SubResource( 26 ), "Idle", "Death", SubResource( 27 ), "Hurt", "Death", SubResource( 28 ), "Attack", "Death", SubResource( 29 ), "Run", "Death", SubResource( 30 ), "Death", "DeathEnd", SubResource( 31 ) ]
start_node = "Idle"
end_node = "DeathEnd"
graph_offset = Vector2( -148.83, 213.123 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=33]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 8, 8 )

[sub_resource type="CapsuleShape2D" id=35]
height = 12.0

[node name="Henchman" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 129
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 29

[node name="DetectionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Death = SubResource( 4 )
anims/DeathEnd = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Run = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 32 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 33 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 24, 0 )
shape = SubResource( 34 )
disabled = true

[node name="PrepHitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PrepHitArea"]
position = Vector2( 24, 0 )
shape = SubResource( 34 )

[node name="Enemy_HenchmanHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_HenchmanHitBox"]
scale = Vector2( 0.9, 1.04 )
shape = SubResource( 35 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
